# alternativetoqkd

docs/: ThreatModel.md  alternativeToQKD.tex  notes.txt  structure.txt
docs/1-randomness/: notes.txt  sources.txt  throughputTests.txt
docs/1-randomness/dieharderResults/: aesAnalysis.txt  rdrandAnalysis.txt
docs/2-storage/: notes.md  notes.txt  performance.txt
docs/3-bitWriting/: benchmarks.xlsx  notes.md  writingBenchmarks.txt
docs/4-apiBitReading/: notes.md
docs/5-demoImplementation/: WireGuard.md
src/WireGuard-Tweaked/: Kbuild  main.c  messages.h  noise.c  noise.h  peer.c  peer.h  receive.c  send.c  state.c  state.h  version.h
src/WireGuard-Tweaked/selftest/: ratelimiter.h
src/WireGuardExtras/: CMakeLists.txt  Makefile  bitConsumption.c  bitConsumption.h  encryptKeys.c  pointerFile.h  ptrIncrementer.c  randomProvider.c  testwgchar.c  wgchar.c
src/WireGuardExtras/Quantis/: Quantis.h  Quantis_random_device.hpp
src/WireGuardExtras/aes/: openssl.h
src/WireGuardExtras/kernelModule/: testwgchar.c  wgchar.c
src/WireGuardExtras/scrypt/: libscrypt.h
src/aesCTR/: CMakeLists.txt  main.c  workingTest.c
src/comboTest/: CMakeLists.txt  bitGeneration.c  bitGeneration.h  encryptKeys.c  encryptKeys.h  main.c  pointerFile.c  pointerFile.h  ptrIncrementer.c  tester.c
src/comboTest/Quantis/: CMakeLists.txt  DllMain.c  Quantis.hpp  Quantis.rc  QuantisExtractor.h  QuantisLibConfig.h  QuantisLibConfig.h.in  QuantisPci_Unix.c  QuantisUsb_Commands.h  Quantis_Compat.c  Quantis_Compat.h  Quantis_Java.h  Quantis_NoHardware.c  libQuantis-NoHw.so.2.12.0  libQuantis.so.2  libQuantis_Extensions.so.2  libQuantis_Extensions.so.2.12.0
src/comboTest/aes/: CMakeLists.txt  openssl.c  openssl.h
src/fileEncrypt-OneTimePad/: CMakeLists.txt  fileEncryptor.c
src/fseek/: fseek.c  seq.c
src/libscryptTest/: CMakeLists.txt  main.c  salt
src/main/: CMakeLists.txt  bitConsumption.c  bitGeneration.c  bitGeneration.h  createRandoms.c  outputRandoms.c  pointerFile.c  pointerFile.h
src/main/Quantis/: Conversion.h  QuantisExtractor.hpp  Quantis_Internal.h
src/main/randombitlib/: CMakeLists.txt  bitConsumption.c  bitConsumption.h  bitGeneration.c  bitGeneration.h  encryptKeys.h  pointerFile.c
src/main/randombitlib/Quantis/: DllMain.h  libQuantis-NoHw.so.2  libQuantis.so.2.12.0
src/openSSL/: CMakeLists.txt  openssl.c
src/testQuantis/: CMakeLists.txt  quantisTest.c
src/testQuantis/Quantis/: Conversion.c  Quantis.vcproj  QuantisPci_Windows.c  QuantisUsb_Unix.c  QuantisUsb_Windows.cpp  Quantis_C.c  Quantis_Cpp.cpp  Quantis_Java.cpp  Quantis_random_device.cpp
src/testRDRAND/: CMakeLists.txt  rdRandThruPut.c  tinyOneTimePad.c
